# surakarta-alphazero

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: train.yml
include/: surakarta_agent_alphazero.h  surakarta_alphazero.h  surakarta_alphazero_mcts.h  surakarta_alphazero_neural_network_base.h  surakarta_alphazero_neural_network_factory.h  surakarta_alphazero_train_util.h
src/: benchmark.cpp  surakarta_agent_alphazero.cpp  surakarta_alphazero_mcts.cpp  surakarta_alphazero_neural_network.cpp  surakarta_alphazero_train_util.cpp  train.cpp
